# dotfiles

./: '  .editorconfig  .envrc  .gitignore  .gitmodules  .nvim.lua  .sops.yaml  1  LICENSE  LICENSE.md  Makefile  README.md  backup-win.yaml  condarc  conf-win.yaml  dconf  default.nix  dotbot.ps1  dotbot.sh  emptty  flake.nix  home.nix  install-arch.yaml  install-linux.yaml  install-win.ps1  install-win.yaml  install.conf.yaml  license  nur.nix  outPath  readme.md  shell.nix  stylua.toml  test  test.md  test.nix  test.org  test.py  test.sh  treefmt.toml  (+1 more)
.github/: README.md  build-pkgs.sh
AutoHotkey/: backslash.ahk  main.ahk  no_win.ahk  terminal.ahk
Code/: Export-Extensions.ps1  Install-Extensions.ps1  extensions  extensions.md  install.sh  keybindings.json  settings.json  vscode.nix
Naga_KeypadMapper/: mapping_01.txt  mapping_01.txt.bak  mapping_02.txt  mapping_03.txt
PowerShell/: Microsoft.PowerShell_profile.ps1  profile.ps1  viper.omp.json
ShareX/: ApplicationConfig.json  HotkeysConfig.json  UploadersConfig.json
Vivaldi/: mainmenu.json
Windows Terminal Preview/: settings.json
X11/: .xprofile  Xresources  environment.env
alacritty/: alacritty-win.yml  alacritty.yml  font.yml  theme-dracula.yml
flake/: .envrc  Cargo.toml  ci.bb  default.nix  dotci.cabal  dotci.nix  flake.nix.hbs  flake.toml  gen_flake.py  generate-flake.py  generate.bb  generate.clj  generate.py  generated.json  generated.nix  lib.bb  matrix.py  template.nix  update-matrix.py  update-nv.py  update.bb
flake/app/: Cli.hs  Main.hs
flake/src/: build_matrix.rs  generate.rs  main.rs
(+1007 files in other folders)
