[package]
name = "dotci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
clap = { version = "4.3.19", features = ["derive", "env"] }
eyre = "0.6.8"
futures = "0.3.28"
handlebars = "4.3.7"
once_cell = "1.18.0"
regex = "1.9.1"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
