cabal-version: 3.4
name:          dotci
version:       0.1.0.0
author:        Fernando Ayats
maintainer:    ayatsfer@gmail.com
build-type:    Simple

common common-options
  default-extensions: OverloadedStrings
  default-language:   Haskell2010
  ghc-options:        -Wall

executable dotci
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:
    Cli
  build-depends:
    , base
    , bytestring
    , co-log
    , mtl
    , optparse-applicative
    , unliftio
